--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
+    "api": "^0.0.1",
+    "axios": "^0.19.0",
     "compression": "^1.7.1",
+    "express": "^4.17.1",
     "polka": "^1.0.0-next.9",
     "sirv": "^0.4.0",
     "sqlite-async": "^1.0.12",
